# 20230727-ikuei-lesson

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: _config.yml  _toc.yml  codes.md  conf.py  intro.md
