[tool.poetry]
name = "20230727-ikuei-lesson"
version = "0.1.0"
description = "2023/7/27 育英高校授業用資料"
authors = ["SATO Daisuke <densuke@st.kobedenshi.ac.jp>"]
readme = "README.md"
#packages = [{include = "20230727_ikuei_lesson"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
jupyter-book = "^0.15.1"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
